Update OpenAPI spec to get songs and add/remove votes
